@@ -86,10 +86,7 @@ option(NOBLKBUFMEM "should block and buffer memory be disabled" OFF)
 option(NOBLKMEM "should block memory be disabled" OFF)
 option(NOBUFMEM "should buffer memory be disabled" OFF)
 option(DEBUGSOL "should the debug solution mechanism be enabled" OFF)
-option(SANITIZE_ADDRESS "should the address sanitizer be enabled in debug mode if available" OFF)
-option(SANITIZE_MEMORY "should the memory sanitizer be enabled in debug mode if available" OFF)
-option(SANITIZE_UNDEFINED "should the undefined behavior sanitizer be enabled in debug mode if available" OFF)
-option(SANITIZE_THREAD "should the thread sanitizer be enabled in debug mode if available" OFF)
+option(SANITIZE "should sanitizers be enabled in debug mode if available" OFF)
 option(COVERAGE "enable coverage support" OFF)
 SET(COVERAGE_CTEST_ARGS "" CACHE STRING "additional ctest arguments for coverage")
 option(MT "use static runtime libraries for Visual Studio compiler" OFF)
@@ -841,17 +838,8 @@ endif()
 if(DEBUGSOL)
   file(APPEND ${CMAKE_BINARY_DIR}/cmake.log " -DDEBUGSOL=on")
 endif()
-if(SANITIZE_ADDRESS)
-  file(APPEND ${CMAKE_BINARY_DIR}/cmake.log " -DSANITIZE_ADDRESS=on")
-endif()
-if(SANITIZE_MEMORY)
-  file(APPEND ${CMAKE_BINARY_DIR}/cmake.log " -DSANITIZE_MEMORY=on")
-endif()
-if(SANITIZE_UNDEFINED)
-  file(APPEND ${CMAKE_BINARY_DIR}/cmake.log " -DSANITIZE_UNDEFINED=on")
-endif()
-if(SANITIZE_THREAD)
-  file(APPEND ${CMAKE_BINARY_DIR}/cmake.log " -DSANITIZE_THREAD=on")
+if(SANITIZE)
+  file(APPEND ${CMAKE_BINARY_DIR}/cmake.log " -DSANITIZE=${SANITIZE}")
 endif()
 if(COVERAGE)
   file(APPEND ${CMAKE_BINARY_DIR}/cmake.log " -DCOVERAGE=on")
