@@ -1119,8 +1119,7 @@ generate_export_header(libscip BASE_NAME scip EXPORT_FILE_NAME ${PROJECT_BINARY_
 target_compile_definitions(scip PRIVATE SCIP_STATIC_DEFINE)
 
 if(CMAKE_BUILD_TYPE STREQUAL "Debug")
-    if (SANITIZE_ADDRESS OR SANITIZE_MEMORY OR SANITIZE_THREAD OR
-        SANITIZE_UNDEFINED)
+    if (SANITIZE)
        find_package(Sanitizers)
        add_sanitizers(libscip)
        add_sanitizers(scip)
