@@ -53,10 +53,7 @@ const char* SCIPgetBuildFlags(
  NOBUFMEM=@NOBUFMEM@\n\
  THREADSAFE=@THREADSAFE@\n\
  READLINE=@READLINE@\n\
- SANITIZE_ADDRESS=@SANITIZE_ADDRESS@\n\
- SANITIZE_MEMORY=@SANITIZE_MEMORY@\n\
- SANITIZE_UNDEFINED=@SANITIZE_UNDEFINED@\n\
- SANITIZE_THREAD=@SANITIZE_THREAD@\n\
+ SANITIZE=@SANITIZE@\n\
  SHARED=@SHARED@\n\
  VERSION=@SCIP_VERSION_MAJOR@.@SCIP_VERSION_MINOR@.@SCIP_VERSION_PATCH@\n\
  API_VERSION=@SCIP_VERSION_API@\n\
